--- a/package.json
+++ b/package.json
@@ -19,9 +19,24 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-regular-svg-icons": "^5.7.2",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "express-http-proxy": "^1.5.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "node-fetch": "^2.3.0",
+    "nodemon": "^1.18.10",
+    "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "yelp-fusion": "^2.2.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
